# django-template

./: .gitignore  LICENSE  README.md  pyproject.toml
authentication/: schemas.py  serializers.py  urls.py  views.py
core/: settings.py  shortcuts.py  urls.py
core/base/: enum.py  models.py  pydantic.py  serializers.py  views.py
core/conf/: __init__.py  http.py
core/utils/: __init__.py  request.py  response.py
